- Adding skipValidation because validation fails with filevault-package-maven-plugin version 1.3.2. - Adding comments to help using with AEM archetype based code structure

--- a/dox/dox.installer/pom.xml
+++ b/dox/dox.installer/pom.xml
@@ -60,6 +60,8 @@
 					<packageType>container</packageType>
 					<jcrRootSourceDirectory>${project.build.outputDirectory}/jcr_root</jcrRootSourceDirectory>
                     <allowIndexDefinitions>true</allowIndexDefinitions>
+					<!-- Validating installation package provided by Adobe not required -->
+					<skipValidation>true</skipValidation>
 				</configuration>
 			</plugin>
 		</plugins>
